alterado
